app-deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  type: ClusterIP
